examples/datalog/10_edge_cases/95_multi_fact_same_tuple.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_dup_insert
Knowledge graph 'test_dup_insert' created.
Switched to knowledge graph: test_dup_insert
> .kg use test_dup_insert
Switched to knowledge graph: test_dup_insert
> +data[(1, "a")].
Inserted 1 fact(s) into 'data'.
> +data[(1, "a")].
No facts inserted (1 duplicate skipped).
> +data[(1, "a")].
No facts inserted (1 duplicate skipped).
> +data[(2, "b")].
Inserted 1 fact(s) into 'data'.
> count_rows(<COUNT:X>) :- data(X, _).
Script error: Parse error: Unknown aggregate function: 
